--- a/galeria.html
+++ b/galeria.html
@@ -22,15 +22,51 @@
     <div class="container">
       <a class="nav-brand" href="index.html">
         <span class="material-symbols-outlined">sports_basketball</span>
-        <span>NBA Flex</span>
+        <span>NBA</span>
       </a>
       <nav class="nav-links">
-        <a class="nav-link" href="index.html">Inicio</a>
-        <a class="nav-link active" href="galeria.html">Jugadas</a>
-        <a class="nav-link" href="guia-estil.html">Guía de estilo</a>
-      </nav>
-    </div>
+  <a class="nav-link" href="index.html">
+    <span class="material-symbols-outlined">home</span>
+    <span>Inicio</span>
+  </a>
+  <a class="nav-link active" href="galeria.html">
+    <span class="material-symbols-outlined">play_arrow</span>
+    <span>Jugadas</span>
+  </a>
+  <a class="nav-link" href="guia-estil.html">
+    <span class="material-symbols-outlined">palette</span>
+    <span>Guía de estilo</span>
+  </a>
+    </nav>
   </header>
+
+<section class="section animaciones">
+  <h2>Momentos animados NBA</h2>
+  <div class="anim-row">
+    <!-- Balón girando -->
+    <div class="anim-card spin">
+      <span class="material-symbols-outlined">sports_basketball</span>
+      <p>Balón girando</p>
+    </div>
+
+    <!-- Texto que se expande -->
+    <div class="anim-card expand">
+      <h3>¡NBA Power!</h3>
+    </div>
+
+    <!-- Icono que rota en 3D -->
+    <div class="anim-card rotate3d">
+      <span class="material-symbols-outlined">star</span>
+      <p>Estrella 3D</p>
+    </div>
+
+    <!-- Jugador que parpadea -->
+    <div class="anim-card blink">
+      <span class="material-symbols-outlined">person</span>
+      <p>Jugador parpadeando</p>
+    </div>
+  </div>
+</section>
 
   <main class="container">
     <!-- Hero -->
@@ -49,7 +85,7 @@
           <div class="card-body">
             <h3 class="card-title">El último tiro de Jordan (1998)</h3>
             <video controls>
-              <source src="assets/media/jordan-lastshot.mov" type="video/quicktime">
+              <source src="assets/media/Video Michael Jordan.mp4" type="video/mp4">
             </video>
           </div>
         </article>
@@ -58,7 +94,7 @@
           <div class="card-body">
             <h3 class="card-title">Triple de Ray Allen (2013)</h3>
             <video controls>
-              <source src="assets/media/rayallen-2013.mov" type="video/quicktime">
+              <source src="assets/media/Video Ray Allen.mp4" type="video/mp4">
             </video>
           </div>
         </article>
@@ -67,7 +103,7 @@
           <div class="card-body">
             <h3 class="card-title">Tapón de LeBron James (2016)</h3>
             <video controls>
-              <source src="assets/media/lebron-block-2016.mov" type="video/quicktime">
+              <source src="assets/media/Video Lebron.mp4" type="video/mp4">
             </video>
           </div>
         </article>
@@ -76,7 +112,7 @@
           <div class="card-body">
             <h3 class="card-title">Canasta de Kawhi Leonard (2019)</h3>
             <video controls>
-              <source src="assets/media/kawhi-2019.mov" type="video/quicktime">
+              <source src="assets/media/Video Kawhi.mp4" type="video/mp4">
             </video>
           </div>
         </article>
@@ -85,7 +121,7 @@
           <div class="card-body">
             <h3 class="card-title">Final Lakers vs Heat (2020)</h3>
             <video controls>
-              <source src="assets/media/lakers-heat-2020.mov" type="video/quicktime">
+              <source src="assets/media/Video Lakers vs Heat.mp4" type="video/mp4">
             </video>
           </div>
         </article>
@@ -94,7 +130,7 @@
           <div class="card-body">
             <h3 class="card-title">Final Warriors vs Celtics (2022)</h3>
             <video controls>
-              <source src="assets/media/warriors-2022.mov" type="video/quicktime">
+              <source src="assets/media/Video Warriors vs Celtics.mp4" type="video/mp4">
             </video>
           </div>
         </article>
