--- a/guia-estil.html
+++ b/guia-estil.html
@@ -22,14 +22,27 @@
     <div class="container">
       <a class="nav-brand" href="index.html">
         <span class="material-symbols-outlined">sports_basketball</span>
-        <span>NBA Flex</span>
+        <span>NBA</span>
       </a>
       <nav class="nav-links">
-        <a class="nav-link" href="index.html">Inicio</a>
-        <a class="nav-link" href="galeria.html">Jugadas</a>
-        <a class="nav-link active" href="guia-estil.html">Guía de estilo</a>
-      </nav>
-    </div>
+  <!-- Inicio con icono de casa -->
+  <a class="nav-link" href="index.html">
+    <span class="material-symbols-outlined">home</span>
+    <span>Inicio</span>
+  </a>
+
+  <!-- Jugadas con icono de play -->
+  <a class="nav-link" href="galeria.html">
+    <span class="material-symbols-outlined">play_arrow</span>
+    <span>Jugadas</span>
+  </a>
+
+  <!-- Guía de estilo con icono de paleta -->
+  <a class="nav-link active" href="guia-estil.html">
+    <span class="material-symbols-outlined">palette</span>
+    <span>Guía de estilo</span>
+  </a>
+    </nav>
   </header>
 
   <main class="container">
