--- a/index.html
+++ b/index.html
@@ -22,15 +22,29 @@
     <div class="container">
       <a class="nav-brand" href="index.html">
         <span class="material-symbols-outlined">sports_basketball</span>
-        <span>NBA Flex</span>
+        <span>NBA</span>
       </a>
       <nav class="nav-links">
-        <a class="nav-link active" href="index.html">Inicio</a>
-        <a class="nav-link" href="galeria.html">Jugadas</a>
-        <a class="nav-link" href="guia-estil.html">Guía de estilo</a>
-      </nav>
-    </div>
+  <!-- Inicio con icono de casa -->
+  <a class="nav-link active" href="index.html">
+    <span class="material-symbols-outlined">home</span>
+    <span>Inicio</span>
+  </a>
+
+  <!-- Jugadas con icono de play -->
+  <a class="nav-link" href="galeria.html">
+    <span class="material-symbols-outlined">play_arrow</span>
+    <span>Jugadas</span>
+  </a>
+
+  <!-- Guía de estilo con icono de paleta -->
+  <a class="nav-link" href="guia-estil.html">
+    <span class="material-symbols-outlined">palette</span>
+    <span>Guía de estilo</span>
+  </a>
+    </nav>
   </header>
+  
 
   <main class="container">
     <!-- Hero -->
@@ -118,45 +132,40 @@
   </ol>
 </section>
 
-    <!-- Récords y estadísticas -->
+ <!-- Récords y estadísticas -->
 <section class="section">
   <h2>Récords históricos</h2>
-  <table class="colors">
-    <thead>
-      <tr>
-        <th>Jugador</th>
-        <th>Récord</th>
-        <th>Equipo principal</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>LeBron James</td>
-        <td>42,000+ puntos (máximo anotador histórico)</td>
-        <td>Lakers / Cavaliers / Heat</td>
-      </tr>
-      <tr>
-        <td>Kareem Abdul-Jabbar</td>
-        <td>38,387 puntos</td>
-        <td>Lakers / Bucks</td>
-      </tr>
-      <tr>
-        <td>Karl Malone</td>
-        <td>36,928 puntos</td>
-        <td>Utah Jazz</td>
-      </tr>
-      <tr>
-        <td>Kobe Bryant</td>
-        <td>33,643 puntos</td>
-        <td>Lakers</td>
-      </tr>
-      <tr>
-        <td>Stephen Curry</td>
-        <td>Más de 3,500 triples convertidos (récord absoluto en la NBA)</td>
-        <td>Golden State Warriors</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="records">
+    <div class="record-card">
+      <h3>LeBron James</h3>
+      <p><strong>Récord:</strong> 42,000+ puntos (máximo anotador histórico)</p>
+      <p><strong>Equipo principal:</strong> Lakers / Cavaliers / Heat</p>
+    </div>
+
+    <div class="record-card">
+      <h3>Kareem Abdul-Jabbar</h3>
+      <p><strong>Récord:</strong> 38,387 puntos</p>
+      <p><strong>Equipo principal:</strong> Lakers / Bucks</p>
+    </div>
+
+    <div class="record-card">
+      <h3>Karl Malone</h3>
+      <p><strong>Récord:</strong> 36,928 puntos</p>
+      <p><strong>Equipo principal:</strong> Utah Jazz</p>
+    </div>
+
+    <div class="record-card">
+      <h3>Kobe Bryant</h3>
+      <p><strong>Récord:</strong> 33,643 puntos</p>
+      <p><strong>Equipo principal:</strong> Lakers</p>
+    </div>
+
+    <div class="record-card">
+      <h3>Stephen Curry</h3>
+      <p><strong>Récord:</strong> Más de 3,500 triples convertidos (récord absoluto en la NBA)</p>
+      <p><strong>Equipo principal:</strong> Golden State Warriors</p>
+    </div>
+  </div>
 </section>
 
     <!-- Curiosidades -->
