--- a/guia-estil.html
+++ b/guia-estil.html
@@ -25,19 +25,14 @@
         <span>NBA</span>
       </a>
       <nav class="nav-links">
-  <!-- Inicio con icono de casa -->
   <a class="nav-link" href="index.html">
     <span class="material-symbols-outlined">home</span>
     <span>Inicio</span>
   </a>
-
-  <!-- Jugadas con icono de play -->
   <a class="nav-link" href="galeria.html">
-    <span class="material-symbols-outlined">play_arrow</span>
-    <span>Jugadas</span>
+    <span class="material-symbols-outlined">View_comfy</span>
+    <span>Galeria</span>
   </a>
-
-  <!-- Guía de estilo con icono de paleta -->
   <a class="nav-link active" href="guia-estil.html">
     <span class="material-symbols-outlined">palette</span>
     <span>Guía de estilo</span>
@@ -63,6 +58,11 @@
       <p style="font-weight:300;">Texto ligero estilo crónica.</p>
       <p style="font-weight:600;">Texto seminegrita para titulares.</p>
       <p style="font-weight:800;">Texto muy marcado para énfasis.</p>
+      <p style="line-height:1.8; letter-spacing:0.05em;">Texto con mayor interlineado y espaciado de letras.</p>
+      <p>
+  <span class="material-symbols-outlined" style="vertical-align:middle;">bar_chart</span>
+  Texto alineado con icono
+</p>
     </section>
 
     <!-- Iconos -->
@@ -99,17 +99,26 @@
 
     <!-- Paleta de colores -->
     <section class="section">
-      <h2>Paleta de colores</h2>
-    <div class="colors-wrap">
-      <table class="colors">
-        <tr><th>Nombre</th><th>HEX</th><th>RGB</th><th>HSL</th></tr>
-        <tr><td>Naranja balón</td><td>#F59E0B</td><td>rgb(245,158,11)</td><td>hsl(38,92%,50%)</td></tr>
-        <tr><td>Negro cancha</td><td>#0f172a</td><td>rgb(15,23,42)</td><td>hsl(220,36%,11%)</td></tr>
-        <tr><td>Blanco líneas</td><td>#FFFFFF</td><td>rgb(255,255,255)</td><td>hsl(0,0%,100%)</td></tr>
-        <tr><td>Azul contraste</td><td>#60A5FA</td><td>rgb(96,165,250)</td><td>hsl(213,94%,68%)</td></tr>
-      </table>
-    </div>
-    </section>
+  <h2>Paleta de colores</h2>
+  <div class="colors-wrap">
+    <table class="colors">
+      <tr>
+        <th>Nombre</th><th>HEX</th><th>RGB</th><th>HSL</th><th>Alpha</th>
+      </tr>
+      <tr>
+        <td>Naranja balón</td><td>#F59E0B</td><td>rgb(245,158,11)</td><td>hsl(38,92%,50%)</td><td>rgba(245,158,11,0.5)</td>
+      </tr>
+      <tr>
+        <td>Negro cancha</td><td>#0f172a</td><td>rgb(15,23,42)</td><td>hsl(220,36%,11%)</td><td>rgba(15,23,42,0.5)</td>
+      </tr>
+      <tr><td>Blanco líneas</td><td>#FFFFFF</td><td>rgb(255,255,255)</td><td>hsl(0,0%,100%)</td><td>rgba(255,255,255,0.5)</td>
+      </tr>
+      <tr><td>Azul contraste</td><td>#60A5FA</td><td>rgb(96,165,250)</td><td>hsl(213,94%,68%)</td><td>rgba(96,165,250,0.5)</td>
+      </tr>
+    </table>
+  </div>
+</section>
+
 
     <!-- Ejemplos prácticos -->
     <section class="section">
