--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@
         <span>NBA</span>
       </a>
       <nav class="nav-links">
-  <!-- Inicio con icono de casa -->
   <a class="nav-link active" href="index.html">
     <span class="material-symbols-outlined">home</span>
     <span>Inicio</span>
   </a>
-
-  <!-- Jugadas con icono de play -->
   <a class="nav-link" href="galeria.html">
-    <span class="material-symbols-outlined">play_arrow</span>
-    <span>Jugadas</span>
+    <span class="material-symbols-outlined">View_comfy</span>
+    <span>Galeria</span>
   </a>
-
-  <!-- Guía de estilo con icono de paleta -->
   <a class="nav-link" href="guia-estil.html">
     <span class="material-symbols-outlined">palette</span>
     <span>Guía de estilo</span>
   </a>
     </nav>
   </header>
+  <nav class="submenu">
+  <a href="#">Noticias</a>
+  <a href="#">Estadísticas</a>
+  <a href="#">Equipos</a>
+</nav>
+
   
 
   <main class="container">
@@ -78,35 +79,40 @@
     <section class="section">
       <h2>Jugadores legendarios</h2>
       <div class="cards">
-        <article class="card">
-          <img class="card-img" src="assets/img/Michael Jordan.jpg" alt="Michael Jordan"/>
-          <div class="card-body">
-            <h3 class="card-title">Michael Jordan</h3>
-            <p class="card-text">El mejor de todos los tiempos, seis anillos con Chicago Bulls.</p>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card-img" src="assets/img/Lebron James.jpg" alt="LeBron James"/>
-          <div class="card-body">
-            <h3 class="card-title">LeBron James</h3>
-            <p class="card-text">Máximo anotador histórico de la NBA, aún activo.</p>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card-img" src="assets/img/Kobe Bryant.jpg" alt="Kobe Bryant"/>
-          <div class="card-body">
-            <h3 class="card-title">Kobe Bryant</h3>
-            <p class="card-text">Leyenda de los Lakers, símbolo de esfuerzo y pasión.</p>
-          </div>
-        </article>
-        <article class="card">
-          <img class="card-img" src="assets/img/Stephen Curry.jpg" alt="Stephen Curry"/>
-          <div class="card-body">
-            <h3 class="card-title">Stephen Curry</h3>
-            <p class="card-text">Revolucionó el baloncesto con el tiro de tres puntos, cuatro veces campeón con los Warriors.</p>
-          </div>
-        </article>
-      </div>
+  <article class="card jordan">
+  <img class="card-img default" src="assets/img/Michael Jordan.jpg" alt="Michael Jordan"/>
+  <img class="card-img hover" src="assets/img/Michael cambio.jpg" alt="Michael Jordan hover"/>
+  <div class="card-body">
+    <h3>Michael Jordan</h3>
+    <p>El mejor de todos los tiempos.</p>
+  </div>
+</article>
+
+  <article class="card lebron">
+    <img class="card-img default" src="assets/img/Lebron James.jpg" alt="LeBron James"/>
+    <img class="card-img hover" src="assets/img/Lebron cambio.jpg" alt="Lebron James hover"/>
+    <div class="card-body">
+      <h3 class="card-title">LeBron James</h3>
+      <p class="card-text">Máximo anotador histórico de la NBA, aún activo.</p>
+    </div>
+  </article>
+  <article class="card kobe">
+    <img class="card-img default" src="assets/img/Kobe Bryant.jpg" alt="Kobe Bryant"/>
+    <img class="card-img hover" src="assets/img/Kobe cambio.jpg" alt="Kopbe Bryant hover"/>
+    <div class="card-body">
+      <h3 class="card-title">Kobe Bryant</h3>
+      <p class="card-text">Leyenda de los Lakers, símbolo de esfuerzo y pasión.</p>
+    </div>
+  </article>
+  <article class="card curry">
+    <img class="card-img default" src="assets/img/Stephen Curry.jpg" alt="Stephen Curry"/>
+    <img class="card-img hover" src="assets/img/Stephen cambio.jpg" alt="Stephen Curry hover"/>
+    <div class="card-body">
+      <h3 class="card-title">Stephen Curry</h3>
+      <p class="card-text">Revolucionó el baloncesto con el tiro de tres puntos, cuatro veces campeón con los Warriors.</p>
+    </div>
+  </article>
+</div>
     </section>
 
     <!-- Jugadas históricas -->
