--- a/galeria.html
+++ b/galeria.html
@@ -17,7 +17,6 @@
 </head>
 <body>
 
-  <!-- Navbar -->
   <header class="navbar">
     <div class="container">
       <a class="nav-brand" href="index.html">
@@ -30,8 +29,8 @@
     <span>Inicio</span>
   </a>
   <a class="nav-link active" href="galeria.html">
-    <span class="material-symbols-outlined">play_arrow</span>
-    <span>Jugadas</span>
+    <span class="material-symbols-outlined">View_comfy</span>
+    <span>Galeria</span>
   </a>
   <a class="nav-link" href="guia-estil.html">
     <span class="material-symbols-outlined">palette</span>
@@ -40,36 +39,30 @@
     </nav>
   </header>
 
-<section class="section animaciones">
-  <h2>Momentos animados NBA</h2>
+<section class="section-anim">
+  <h2>Animaciones</h2>
   <div class="anim-row">
-    <!-- Balón girando -->
-    <div class="anim-card spin">
-      <span class="material-symbols-outlined">sports_basketball</span>
-      <p>Balón girando</p>
+    <div class="anim-card bounce ">
+      <div class="box"></div>
+      <p>Cuadrado que rebota</p>
     </div>
-
-    <!-- Texto que se expande -->
-    <div class="anim-card expand">
-      <h3>¡NBA Power!</h3>
+    <div class="anim-card color-change ">
+      <div class="circle"></div>
+      <p>Circulo que crece y cambia de color</p>
     </div>
-
-    <!-- Icono que rota en 3D -->
-    <div class="anim-card rotate3d">
-      <span class="material-symbols-outlined">star</span>
-      <p>Estrella 3D</p>
+    <div class="anim-card typing reveal">
+      <p class="typing-text">Animación de escritura...</p>
     </div>
-
-    <!-- Jugador que parpadea -->
-    <div class="anim-card blink">
-      <span class="material-symbols-outlined">person</span>
-      <p>Jugador parpadeando</p>
+    <div class="anim-card loader reveal">
+      <div class="spinner"></div>
+      <p>Loader</p>
     </div>
   </div>
 </section>
 
+
+
   <main class="container">
-    <!-- Hero -->
     <section class="hero">
       <div class="hero-text">
         <h1>Jugadas históricas de la NBA</h1>
@@ -84,7 +77,7 @@
         <article class="card">
           <div class="card-body">
             <h3 class="card-title">El último tiro de Jordan (1998)</h3>
-            <video controls>
+            <video autoplay loop muted playsinline controls>
               <source src="assets/media/Video Michael Jordan.mp4" type="video/mp4">
             </video>
           </div>
@@ -93,7 +86,7 @@
         <article class="card">
           <div class="card-body">
             <h3 class="card-title">Triple de Ray Allen (2013)</h3>
-            <video controls>
+            <video autoplay loop muted playsinline controls>
               <source src="assets/media/Video Ray Allen.mp4" type="video/mp4">
             </video>
           </div>
@@ -102,7 +95,7 @@
         <article class="card">
           <div class="card-body">
             <h3 class="card-title">Tapón de LeBron James (2016)</h3>
-            <video controls>
+            <video autoplay loop muted playsinline controls>
               <source src="assets/media/Video Lebron.mp4" type="video/mp4">
             </video>
           </div>
@@ -111,7 +104,7 @@
         <article class="card">
           <div class="card-body">
             <h3 class="card-title">Canasta de Kawhi Leonard (2019)</h3>
-            <video controls>
+            <video autoplay loop muted playsinline controls>
               <source src="assets/media/Video Kawhi.mp4" type="video/mp4">
             </video>
           </div>
@@ -120,7 +113,7 @@
         <article class="card">
           <div class="card-body">
             <h3 class="card-title">Final Lakers vs Heat (2020)</h3>
-            <video controls>
+            <video autoplay loop muted playsinline controls>
               <source src="assets/media/Video Lakers vs Heat.mp4" type="video/mp4">
             </video>
           </div>
@@ -129,7 +122,7 @@
         <article class="card">
           <div class="card-body">
             <h3 class="card-title">Final Warriors vs Celtics (2022)</h3>
-            <video controls>
+            <video autoplay loop muted playsinline controls>
               <source src="assets/media/Video Warriors vs Celtics.mp4" type="video/mp4">
             </video>
           </div>
